# center-of-third-place

./: .gitignore  Makefile  README.md  centeroid_calculator.py  docker-compose.yml  google_maps_links_converter.py  main.py  pyproject.toml
src/: app.py  logger.py  main.py
src/container/: __init__.py  container.py
src/repositories/: centeroid_calculator.py  google_maps_links_converter.py  mongodb.py
src/routes/: get_activities.py  get_activities_based_on_distance_to_center.py  get_participants.py  get_point_in_the_middle.py  post_activity.py  post_participant.py  router.py
