[tool.poetry]
name = "center-of-third-place"
version = "0.1.0"
description = "Let's give it a go"
authors = ["renaudjester <renaud.jester@outlook.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
dependencies = "^7.7.0"
pymongo = "^4.6.2"
pydantic = "^2.6.3"
termcolor = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
